Fix Scrollbar styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,3 +133,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.4); /* Tailor this to your theme */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: rgba(100, 100, 100, 0.2);
+}
